# serde-bench

./: README.md  compress.sh  json.tgz  setup.fsx  small.json  uncompress.sh
.github/workflows/: bench.yml
dotnet/: .gitignore  README.md
dotnet/jsonbench/: Benchmarks.fs  Program.fs  jsonbench.fsproj
java/: .gitignore  README.md  pom.xml
java/benchmark-gson/: README.md  pom.xml
java/benchmark-gson/src/main/java/com/jsonbench/: Main.java
java/benchmark-gson/src/test/java/com/jsonbench/: BenchmarkTest.java
java/benchmark-jackson/: README.md  pom.xml
java/benchmark-jackson/src/main/java/com/jsonbench/: Main.java
java/benchmark-jackson/src/test/java/com/jsonbench/: BenchmarkTest.java
rust/serdejsonbench/: Cargo.toml  README.md
rust/serdejsonbench/benches/: json_benchmark.rs
rust/serdejsonbench/examples/: bench.rs  ndjson.rs  serde_json_stream_deserializer.rs  stream_deserializer_api_example.rs
rust/serdejsonbench/src/: lib.rs  serde_json_simple_deserializer.rs  serde_json_stream_deserializer.rs  types.rs
