[package]
name = "serdejsonbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
simd-json = "0.10.7"

[dev-dependencies]
criterion = "^0.5.1"
rand = "^0.8.5"
chrono = "0.4"

[[bench]]
name = "json_benchmark"
harness = false

[profile.bench]
debug = true
[profile.release]
debug = true
